@@ -4,6 +4,7 @@ import addsynth.overpoweredmod.Debug;
 import addsynth.overpoweredmod.items.DimensionAnchor;
 import addsynth.overpoweredmod.items.FusionCore;
 import addsynth.overpoweredmod.items.OverpoweredItem;
+import addsynth.overpoweredmod.items.PlasmaItem;
 import net.minecraft.item.Item;
 
 public final class ModItems {
@@ -18,6 +19,7 @@ public final class ModItems {
   public static final Item            vacuum_container         = new OverpoweredItem("vacuum_container");
   public static final Item            beam_emitter             = new OverpoweredItem("beam_emitter");
   public static final Item            scanning_laser           = new OverpoweredItem("scanning_laser");
+  public static final Item            plasma                   = new PlasmaItem("plasma");
   public static final Item            fusion_core              = new FusionCore("fusion_core");
   public static final Item            dimensional_anchor       = new DimensionAnchor("dimensional_anchor");
   
