@@ -32,6 +32,7 @@
 
 "item.overpowered.beam_emitter": "Beam Emitter",
 "item.overpowered.unknown_technology": "Unknown Technology",
+"item.overpowered.plasma": "Plasma",
 "item.overpowered.fusion_core": "Fusion Core",
 "item.overpowered.dimensional_anchor": "Dimensional Anchor",
 
